--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -178,6 +178,10 @@ alloy-outputscript-modules-example-1=Event module
 alloy-outputscript-modules-example-2=Node module
 alloy-outputscript-modules-script-1=This example uses the `event` module in order to run the `&lt;script&gt;` once the `domready` event occurs. The `domready` event occurs *after* the page is rendered, so scripts which run on `domready` do not block rendering of the rest of the page.
 alloy-outputscript-modules-script-2=This example uses the `node` module in order to attach a callback to the `click` event of the `&lt;button&gt;`.
+alloy-outputstylesheet=[javadoc:com.liferay.faces.alloy.component.outputlink.OutputStylesheet] is a [javadoc:javax.faces.component.UIOutput] component that renders an `&lt;style&gt;` element.
+alloy-outputstylesheet-general=Styles can be specified inline or included from resource files.
+alloy-outputstylesheet-general-example-1=Specifying a CSS class inline.
+alloy-outputstylesheet-general-example-2=Specifying a CSS resource to be included on the page.
 alloy-outputtext=[javadoc:com.liferay.faces.alloy.component.outputtext.OutputText] is a [javadoc:javax.faces.component.UIOutput] component that renders its own value as text. Since it extends [javadoc:javax.faces.component.html.HtmlOutputText], it supports all the features of [vdldoc:h:outputText].
 alloy-outputtext-general=The [vdldoc:alloy:outputText:value] attribute can be *bound* to a model bean property via EL.
 alloy-outputtext-conversion=The [vdldoc:alloy:outputText:value] attribute can be *converted* by specifying an [vdldoc:f:converter] type of child tag.
@@ -291,6 +295,7 @@ bridge-inputfile-general=By default, one file can be uploaded as a non-Ajax (ful
 bridge-inputfile-instant-ajax=Files can be uploaded *instantly* via Ajax by adding an [vdldoc:f:ajax] child tag.
 bridge-inputfile-multiple=Multi-file upload is supported by setting the HTML5 passthrough attribute [vdldoc:alloy:inputFile:multiple]=`multiple`.
 bridge-inputfile-portlet-only=The [vdldoc:bridge:inputFile] component is a *legacy* feature of Liferay Faces Bridge. Although it has the benefit of supporting *multi-file uploads*, it only works in a *portlet environment* (not in a webapp environment).
+button=Button
 buttonlink=Button/Link
 cancel=Cancel
 choose-files=Choose Files
