--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -12,6 +12,24 @@ alloy-accordion-selected-tab=The [vdldoc:alloy:accordion:selectedIndex] attribut
 alloy-accordion-server-events=Specifying the [vdldoc:f:ajax] child tag with [vdldoc:f:ajax:event]=`tabCollapse` or `tabExpand` will broadcast the server-side [javadoc:com.liferay.faces.alloy.component.tab.TabCollapseEvent] or [javadoc:com.liferay.faces.alloy.component.tab.TabExpandEvent] respectively. Listening to the event is accomplished by specifying a backing-bean method via the [vdldoc:alloy:accordion:tabCollapseListener] and [vdldoc:alloy:accordion:tabExpandListener] attributes.
 alloy-audio=[javadoc:com.liferay.faces.alloy.component.Audio] is a [javadoc:javax.faces.component.UIOutput] component that renders a `&lt;div&gt;` that contains an HTML5 `&lt;audio&gt;` element. It also supports graceful degradation for older browsers.
 alloy-audio-general=The general usage of the component is to set the [vdldoc:alloy:audio:value] attribute to a [javadoc:java.lang.String] audio URL. Alternatively a [javadoc:java.util.List]&lt;[javadoc:java.lang.String]&gt; can be specified that contains additional audio URLs.
+alloy-autocomplete=[javadoc:com.liferay.faces.alloy.component.autocomplete.AutoComplete] is a [javadoc:javax.faces.component.UIInput] component that renders a textbox and a autoComplete list. Options can be added by specifying [vdldoc:f:selectItem] or [vdldoc:f:selectItems] tags as children. Since it extends [javadoc:javax.faces.component.html.HtmlInputText], it supports all the features of [vdldoc:h:inputText].
+alloy-autocomplete-general=This component includes built-in server-side and client-side filters which can be utilized in place of custom filtering.
+alloy-autocomplete-general-example-1=Specifying [vdldoc:alloy:autoComplete:serverFilterType]
+alloy-autocomplete-general-example-2=Specifying [vdldoc:alloy:autoComplete:clientFilterType]
+alloy-autocomplete-custom-filter=The [vdldoc:alloy:autocomplete:serverCustomFilter] and [vdldoc:alloy:autocomplete:clientCustomFilter] attributes allow for custom filtering of `autoComplete` options.
+alloy-autocomplete-custom-filter-example-1=Server-side custom filtering method
+alloy-autocomplete-custom-filter-example-2=Client-side custom filtering callback
+alloy-autocomplete-data-model=The [vdldoc:f:selectItems:value] attribute of the child [vdldoc:f:selectItems] can be bound to a model bean property in order to specify a the autoComplete options list from model data.
+alloy-autocomplete-delay=Filtering can be *delayed* via the [vdldoc:alloy:autoComplete:delay] attribute.
+alloy-autocomplete-validation=This component includes built-in validation via the [vdldoc:alloy:autoComplete:listItemRequired] attribute which validates whether the value is contained in the list of completion items. It also supports external validators such as [vdldoc:f:validateRegex].
+alloy-autocomplete-validation-example-1=Specifying `listItemRequired="true"`
+alloy-autocomplete-validation-example-2=Specifying an `f:validateRegex` with pattern `&#91a-zA-Z&#93&#42;`
+alloy-autocomplete-instant-ajax=The component supports *instant Ajax* by adding an [vdldoc:f:ajax] child tag.
+alloy-autocomplete-instant-ajax-example-1=Instant-Ajax when an item is selected
+alloy-autocomplete-instant-ajax-example-2=Instant-Ajax when an item is selected or when the user enters a value
+alloy-autocomplete-min-chars=The *minimum number of characters* required before filtering can be specified via the [vdldoc:alloy:autoComplete:minChars] attribute.
+alloy-autocomplete-highlighter=The results of a completion query can be *highlighted* via the [vdldoc:alloy:autoComplete:highlighterType] attribute.
+alloy-autocomplete-server-events=Specifying the [vdldoc:f:ajax] tag with [vdldoc:f:ajax:event]=`itemSelect` will broadcast the server-side [javadoc:com.liferay.faces.alloy.component.autocomplete.ItemSelectEvent]. Listening to the event is accomplished by specifying a backing-bean method via the [vdldoc:alloy:autoComplete:itemSelectListener] attribute.
 alloy-body=[javadoc:com.liferay.faces.alloy.component.body.Body] is a [javadoc:javax.faces.component.UIOutput] that renders a `&lt;body&gt;` element for webapps and a `&lt;div&gt;` for portlets.<br/><br/>Since it extends [javadoc:javax.faces.component.html.HtmlBody], it supports all the features of [vdldoc:h:body]. However, *the main benefit* of using [vdldoc:alloy:body] is that scripts specified by `&lt;alloy:outputScript target="body" /&gt;` as well as JavaScript closures rendered by Liferay Faces Alloy components are rendered as a single `&lt;script&gt;...&lt;/script&gt;` just before the closing `&lt;/body&gt;` tag.
 alloy-body-general=The usage of [vdldoc:alloy:body] in webapps is the same as with portlets. However, the surrounding tag in a webapp is `&lt;html&gt;` whereas the surrounding tag in a portlet is [vdldoc:f:view].
 alloy-button=[javadoc:com.liferay.faces.alloy.component.button.Button] is a [javadoc:javax.faces.component.UIOutput] component that renders a styleable HTML `&lt;button&gt;` element. The default [vdldoc:alloy:button:type] is `button`. Since it extends [javadoc:javax.faces.component.html.HtmlOutcomeTargetButton], it supports all the features of [vdldoc:h:button]. The component does *not need to be a child* of `h:form` since the [vdldoc:alloy:button:outcome] attribute is designed to navigate via HTTP GET.
@@ -157,8 +175,8 @@ alloy-inputtime-general=The [vdldoc:alloy:inputDate:showOn] attribute specifies 
 alloy-inputtime-general-example-1=Specifying [vdldoc:alloy:inputTime:showOn]=`focus` (the default)
 alloy-inputtime-general-example-2=Specifying [vdldoc:alloy:inputTime:showOn]=`button`
 alloy-inputtime-general-example-3=Specifying [vdldoc:alloy:inputTime:showOn]=`both`
-alloy-inputtime-highlight=Times can be *highlighted* according to user input via the [vdldoc:alloy:inputTime:highlightType] attribute.
-alloy-inputtime-highlight-example=Specifying `highlightType="phraseMatch"`
+alloy-inputtime-highlighter=Times can be *highlighted* according to user input via the [vdldoc:alloy:inputTime:highlighterType] attribute.
+alloy-inputtime-highlighter-example=Specifying `highlighterType="phraseMatch"`
 alloy-inputtime-instant-ajax=The component supports *instant Ajax* by simply adding an [vdldoc:f:ajax] child tag.
 alloy-inputtime-instant-ajax-example-1=Instant-Ajax when a time is selected
 alloy-inputtime-instant-ajax-example-2=Instant-Ajax when a time is selected or when the user enters a value
@@ -368,6 +386,7 @@ conversion-to-a-date-using-f-convertdatetime=Conversion to a [javadoc:java.util.
 converter-message=Failed to convert this field
 copy-into-the-hidden-input=Copy into the hidden input
 country=Country
+custom-filter=Custom Filter
 customers=Customers
 data=Data
 data-model=Data Model
@@ -376,6 +395,7 @@ date-pattern=Date Pattern
 description=Description
 default=Default
 default-value=Default Value
+delay=Delay
 delete=Delete
 disable=Disable
 dislike=Dislike
@@ -451,8 +471,9 @@ field-label=Field Label
 fieldset-legend=Fieldset Legend
 filter=Filter
 footer=Footer
-highlight=Highlight
+highlighter=Highlighter
 first-name=First Name
+force-item-selection=Force Item Selection
 form-action-attribute-view-params-description=The `action` attribute of the rendered `&lt;form&gt;` (shown below) contains view parameters in the query-string. 
 general=General
 h-inputfile=[javadoc:javax.faces.component.html.HtmlInputFile] is a [javadoc:javax.faces.component.UIInput] component for JSF 2.2+ that renders an `&lt;input&gt;` element with `type="file"`.
@@ -482,6 +503,7 @@ localization=Localization
 max-length-events=Max Length Events
 menu=Menu
 message-styling=Message Styling
+min-chars=Min Chars
 min-max=Min/Max
 mini=Mini
 misc=Miscellaneous
@@ -506,6 +528,7 @@ parameter-value=Parameter Value
 password=Password
 pick=Pick
 please-consider-using=Please consider using
+please-enter-a-valid-item-name=Please enter a valid item name.
 portal-permissionsurl=[javadoc:com.liferay.faces.portal.component.PermissionsURL] is a [javadoc:javax.faces.component.UIOutput] component that generates a URL pointing to the Liferay Portal Permissions UI. If the [vdldoc:portal:permissionsURL:var] attribute is present, the component introduces a variable into the EL. Otherwise, the URL is written to the response.
 portal-permissionsurl-general=Access the *Portlet Resource Permissions* by specifying the primary key of a portlet via the [vdldoc:portal:permissionsURL:resourcePrimKey] attribute, and optionally specifying [vdldoc:portal:permissionsURL:roleTypes] in order to control which roles are displayed in the Liferay Portal Permissions UI.
 portal-permissionsurl-general-example-1=Introducing a [vdldoc:portal:permissionsURL:var] into the EL with default role types (Guest, Owner, Power User, Site Member, User)
