FACES-1953 Develop alloy:accordion component FACES-1901 Develop alloy:tab and alloy:tabView components (added contentClass and headerClass attributes) FACES-1894 Add general utilities for Liferay Faces Alloy Components (added NamedAjaxBehaviorEvent and FacesContext, added new constants to StringPool, added encodeClientState/decodeClientState to ClientComponentRenderer, added decodeClientBehaviors to AlloyRenderer) FACES-1714 Develop Liferay Faces Showcase (utilize recently added alloy:accordion in the showcase for categories)

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -2,6 +2,14 @@ actionlistener-execution-when-immediate-is-false=ActionListener execution when [
 actionlistener-execution-when-immediate-is-true=ActionListener execution when [vdldoc:alloy:commandButton:immediate] is `true`
 agree=Agree
 are-you-sure-you-want-to-delete-this=Are you sure you want to delete this?
+alloy-accordion=[javadoc:com.liferay.faces.alloy.component.Accordion] is a [javadoc:javax.faces.component.UIData] (iterator) component that renders child tabs either statically or dynamically.
+alloy-accordion-data-model=Since it extends [javadoc:javax.faces.component.UIData], it can render tabs *dynamically* when the [vdldoc:alloy:accordion:value] attribute is bound via EL to a model bean property (which is wrapped implicitly by JSF with a [javadoc:javax.faces.model.DataModel]). The [vdldoc:alloy:accordion:var] attribute can be used to introduce a variable name into the EL when iterating over the model.
+alloy-accordion-general=Tabs can be specified *statically* with [vdldoc:alloy:tab] child tags. Tab headers can be specified with a *header facet* or *header text* can be styled with CSS.
+alloy-accordion-general-example-1=Specifying a *header facet* with an image and text
+alloy-accordion-general-example-2=Specifying *header text* and styling via CSS
+alloy-accordion-multiple=When [vdldoc:alloy:accordion:multiple]=`true`, multiple tabs can be expanded. <br /><br />*JavaScript API:*<ul><li>`collapseAll()` causes all of the accordion tabs to close</li><li>`expandAll()` causes all of the accordion tabs to open</li></ul>
+alloy-accordion-selected-tab=The [vdldoc:alloy:accordion:selectedIndex] attribute is a zero-based integer representing the selected tab. The *client-side state* of the tab is preserved when a form is submitted.
+alloy-accordion-server-events=Specifying the [vdldoc:f:ajax] child tag with [vdldoc:f:ajax:event]=`tabCollapsed` or `tabExpanded` will broadcast the server-side [javadoc:com.liferay.faces.alloy.component.accordion.AccordionTabEvent]. Listening to the event is accomplished by specifying a backing-bean method via the [vdldoc:alloy:accordion:tabEventListener] attribute.
 alloy-button=[javadoc:com.liferay.faces.alloy.component.button.Button] is a [javadoc:javax.faces.component.UIOutput] component that renders a styleable HTML `&lt;button&gt;` element. The default [vdldoc:alloy:button:type] is `button`. Since it extends [javadoc:javax.faces.component.html.HtmlOutcomeTargetButton], it supports all the features of [vdldoc:h:button]. The component does *not need to be a child* of `h:form` since the [vdldoc:alloy:button:outcome] attribute is designed to navigate via HTTP GET.
 alloy-button-general=*Children* such as [vdldoc:alloy:icon], [vdldoc:alloy:outputText], and [vdldoc:h:graphicImage] can be specified for styling purposes. Alternatively, the [vdldoc:alloy:button:image] and [vdldoc:alloy:button:value] attributes can be specified for styling purposes.
 alloy-button-general-example-1=Styling via children
@@ -229,9 +237,10 @@ alloy-tabview-general=Tabs can be specified *statically* with [vdldoc:alloy:tab]
 alloy-tabview-data-model=Since it extends [javadoc:javax.faces.component.UIData], it can render tabs *dynamically* when the [vdldoc:alloy:tabView:value] attribute is bound via EL to a model bean property (which is wrapped implicitly by JSF with a [javadoc:javax.faces.model.DataModel]). The [vdldoc:alloy:tabView:var] attribute can be used to introduce a variable name into the EL when iterating over the model.
 back-to-navigation-with=Back to Navigation with
 birthday=Birthday
+block=Block
 bridge-inputfile=[javadoc:com.liferay.faces.bridge.component.HtmlInputFile] is a [javadoc:javax.faces.component.UIInput] component that renders an *&lt;input type="file" /&gt;* element. The component requires the [vdldoc:h:form:enctype] attribute of the encosing [vdldoc:h:form] tag to be *"multipart/form-data"* and only works in a full-page (non-Ajax) postback.
 bridge-inputfile-general=The HTML5 [vdldoc:bridge:inputFile:multiple] attribute can be set to *"multiple"* in order to support multi-file uploads.
-block=Block
+buttonlink=Button/Link
 cancel=Cancel
 clear-the-value-of-the-hidden-input=Clear the value of the hidden input
 click-here-and-press-the-tab-key=Click here and press the TAB key
@@ -243,6 +252,7 @@ click-here-to-toggle-the-dialog=Click here to toggle the dialog
 click-here-to-toggle-the-popover-and-click-outside-the-popover-to-hide=Click here to toggle the popover and click outside the popover to hide
 column-width=Column Width
 column-offset=Column Offset
+collapse-all=Collapse All
 copy-1234-to-the-value-of-the-hidden-input=Copy '1234' to the value of the hidden input
 copy-a-date-to-the-value-of-the-hidden-input=Copy a date to the value of the hidden input
 copy-a-valid-email-address-to-the-hidden-input=Copy a valid email address to the hidden input
@@ -255,6 +265,7 @@ converter-message=Failed to convert this field
 copy-into-the-hidden-input=Copy into the hidden input
 country=Country
 customers=Customers
+data=Data
 data-model=Data Model
 date-of-birth=Date of Birth
 date-pattern=Date Pattern
@@ -264,6 +275,7 @@ default-value=Default Value
 dislike=Dislike
 error=Error
 example=Example
+expand-all=Expand All
 favorite-liferay-benefit=Favorite Liferay Benefit
 field-label=Field Label
 fieldset-legend=Fieldset Legend
@@ -275,6 +287,7 @@ hyperlink-targeting-the-showcase-portlet=Hyperlink targeting the Showcase portle
 immediate=Immediate
 i-agree-to-the-terms-of-the-license-agreement=I agree to the terms of the license agreement
 info=Info
+input=Input
 instant-ajax=Instant Ajax
 inverse=Inverse
 large=Large
@@ -290,15 +303,20 @@ min-max-date=Min/Max Date
 mini=Mini
 modal=Modal
 model-value=Model Value
+multimedia=Multimedia
+multiple=Multiple
 multiple-panes=Multiple Panes
 multiple-selection=Multiple Selection
 navigation=Navigation
 note=Note
 note-chromium-issue-4579=Note: <a href="https://code.google.com/p/chromium/issues/detail?id=4579" target="_blank">Chromium Issue#4579</a> may cause this component to display *more than one* menu item.
 note-multiple-selection-not-available-for-inputdate=*Note:* Multiple selection is not available for [vdldoc:alloy:inputDate].
+output=Output
+panel=Panel
 param=Param
 parameter-value=Parameter Value
 password=Password
+pick=Pick
 please-consider-using=Please consider using
 portlet-actionurl=[javadoc:com.liferay.faces.bridge.component.PortletActionURL] is a [javadoc:javax.faces.component.UIOutput] component that provides the ability to get a [javadoc:javax.portlet.PortletURL] that invokes the ACTION_PHASE of the portlet lifecycle targeting the current portlet.
 portlet-actionurl-general=Specify [vdldoc:portlet:param] as a child tag in order to add portlet *action parameters* to the URL. The [vdldoc:portlet:actionURL] component tag is *provided for the sake of completeness* since it has little purpose in JSF portlets. As shown in the example below, a *practical use-case* might be to @Override [javadoc:javax.portlet.faces.GenericFacesPortlet] in order to intercept a non-JSF postback.
@@ -318,6 +336,9 @@ rendered=Rendered
 required=Required
 required-message=This is a required field
 right-to-left=Right-To-Left
+select=Select
+selected-tab=Selected Tab
+server-events=Server Events
 size=Size
 small=Small
 source-code=Source Code
