--- a/demos/bridge/icefaces3-portlet/src/main/webapp/WEB-INF/liferay-plugin-package.properties
+++ b/demos/bridge/icefaces3-portlet/src/main/webapp/WEB-INF/liferay-plugin-package.properties
@@ -1,8 +1,8 @@
-name=ICEfaces3 Compatibility Components
+name=ICEfaces3 Portlet
 module-group-id=com.liferay.faces.demos.bridge
 module-incremental-version=1
 tags=sample
-short-description=This plugin is a test portlet that uses Liferay Faces Bridge, JSF 2, ICEfaces 2, and the new ICEfaces 2 ACE components.
+short-description=This plugin is a test portlet that uses Liferay Faces Bridge, JSF 2, and ICEfaces 3 ACE components.
 change-log=
 page-url=http://www.liferay.com/community/liferay-projects/liferay-faces
 author=liferay.com
