FACES-1955 Develop alloy:outputScript component FACES-1714 Develop Liferay Faces Showcase (added use-cases for alloy:outputScript) FACES-1928 Remove compile-time dependency on portal-service.jar from Liferay Faces Alloy (Moved LiferayPortletUtil.java and LiferayThemeDisplayUtil.java to Util jar and modified them to avoid using reflection.)

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -137,6 +137,18 @@ alloy-outputremainingchars-default-value=When a *default value* of an associated
 alloy-outputremainingchars-max-length-events=There are two attributes to use for events:
 alloy-outputremainingchars-max-length-reached-1=The [vdldoc:alloy:outputRemainingChars:onMaxlengthReached] event occurs *every time* maxlength is reached.
 alloy-outputremainingchars-max-length-reached-2=The [vdldoc:alloy:outputRemainingChars:onceMaxlengthReached] event occurs *the first time* maxlength is reached.
+alloy-outputscript=[javadoc:com.liferay.faces.alloy.component.outputlink.OutputScript] is a [javadoc:javax.faces.component.UIOutput] component that renders an `&lt;script&gt;` element with `type="text/javascript"`. It supports all the features of [vdldoc:h:outputScript] and adds the [vdldoc:alloy:outputScript:use] attribute which provides the ability to specify AlloyUI or YUI modules as dependencies.
+alloy-outputscript-general=The script can be rendered in different *positions* on the page via the [vdldoc:alloy:outputScript:target] attribute. Valid values include <code>body</code>, <code>form</code>, and <code>head</code>. The default value of this attribute is an empty (null) value which causes the <code>&lt;script&gt;</code> to be rendered inline (corresponding to its position in the view). Specifying <code>body</code> for the target attribute will cause the <code>&lt;script&gt;</code> to be rendered as close to the closing body tag as possible.
+alloy-outputscript-general-example-1=Script rendered inline
+alloy-outputscript-general-example-2=Script rendered at the bottom of the page
+alloy-outputscript-general-script-1=This `&lt;script&gt;` is rendered inline because the [vdldoc:alloy:outputScript:target] attribute is not specified. The drawback of inline scripts is that they block rendering of the rest of the page.
+alloy-outputscript-general-script-2=This `&lt;script&gt;` is rendered immediately before the closing `&lt;/body&gt;` tag because [vdldoc:alloy:outputScript:target]=`body`. The benefit of rendering scripts before the closing `&lt;/body&gt;` tag is that they do not block rendering of the rest of the page.
+alloy-outputscript-resource=A JavaScript resource can be added to the page by specifying the [vdldoc:alloy:outputScript:library] and [vdldoc:alloy:outputScript:name] attributes.
+alloy-outputscript-modules=AlloyUI or YUI *modules* can be specified via the [vdldoc:alloy:outputScript:use] attribute.
+alloy-outputscript-modules-example-1=Event module
+alloy-outputscript-modules-example-2=Node module
+alloy-outputscript-modules-script-1=This example uses the `event` module in order to run the `&lt;script&gt;` once the `domready` event occurs. The `domready` event occurs *after* the page is rendered, so scripts which run on `domready` do not block rendering of the rest of the page.
+alloy-outputscript-modules-script-2=This example uses the `node` module in order to attach a callback to the `click` event of the `&lt;button&gt;`.
 alloy-outputtext=[javadoc:com.liferay.faces.alloy.component.outputtext.OutputText] is a [javadoc:javax.faces.component.UIOutput] component that renders its own value as text. Since it extends [javadoc:javax.faces.component.html.HtmlOutputText], it supports all the features of [vdldoc:h:outputText].
 alloy-outputtext-general=The [vdldoc:alloy:outputText:value] attribute can be *bound* to a model bean property via EL.
 alloy-outputtext-conversion=The [vdldoc:alloy:outputText:value] attribute can be *converted* by specifying an [vdldoc:f:converter] type of child tag.
@@ -243,6 +255,7 @@ bridge-inputfile-general=The HTML5 [vdldoc:bridge:inputFile:multiple] attribute 
 buttonlink=Button/Link
 cancel=Cancel
 clear-the-value-of-the-hidden-input=Clear the value of the hidden input
+click-here-to-execute-the-click-event-callback=Click here to execute the click event callback
 click-here-and-press-the-tab-key=Click here and press the TAB key
 click-here-to-show-the-dialog=Click here to show the dialog
 click-here-to-show-the-dialog-and-cilck-outside-the-dialog-to-hide=Click here to show the dialog and click outside the dialog to hide
@@ -305,6 +318,7 @@ modal=Modal
 model-value=Model Value
 multimedia=Multimedia
 multiple=Multiple
+modules=Modules
 multiple-panes=Multiple Panes
 multiple-selection=Multiple Selection
 navigation=Navigation
@@ -335,6 +349,7 @@ redisplay=Redisplay
 rendered=Rendered
 required=Required
 required-message=This is a required field
+resource=Resource
 right-to-left=Right-To-Left
 select=Select
 selected-tab=Selected Tab
