FACES-1896: Please consider this enhancement, adding menus to the buttons

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -15,7 +15,11 @@ alloy-button-general=*Children* such as [vdldoc:alloy:icon], [vdldoc:alloy:outpu
 alloy-button-general-example-1=Styling via children
 alloy-button-general-example-2=Styling via [vdldoc:alloy:button:image] attribute
 alloy-button-general-example-3=Styling via [vdldoc:alloy:button:value] attribute
-alloy-button-navigation=The component can be used to *navigate* between pages with the [vdldoc:alloy:button:outcome] attribute. Setting [vdldoc:alloy:link:includeViewParams]=`true` will automatically include all of the [vdldoc:f:viewParam] tags (view parameters) as URL parameters.
+alloy-button-menu=There are different ways to style the menus
+alloy-button-menu-example-1=Styling via [vdldoc:alloy:menu:label] attribute
+alloy-button-menu-example-2=Styling via [vdldoc:f:facet] tag
+alloy-button-menu-example-3=Use a [vdldoc:alloy:menu:label] or a [vdldoc:f:facet] to style the button
+alloy-button-navigation=The component can be used to *navigate* between pages with the [vdldoc:alloy:button:outcome] attribute. Setting [vdldoc:alloy:button:includeViewParams]=`true` will automatically include all of the [vdldoc:f:viewParam] tags (view parameters) as URL parameters.
 alloy-button-param=URL *parameters* can be specified via [vdldoc:f:param] child tags. Setting [vdldoc:alloy:button:includeViewParams]=`true` will automatically include all of the [vdldoc:f:viewParam] tags (view parameters) as URL parameters.
 alloy-button-various-styles=The component can be *styled* with Bootstrap class names as described in the <a href="http://liferay.github.io/alloy-bootstrap/base-css.html#buttons" target="_blank">Alloy Base CSS</a> documentation.
 alloy-commandbutton=[javadoc:com.liferay.faces.alloy.component.commandbutton.CommandButton] is a [javadoc:javax.faces.component.UICommand] component that renders a styleable HTML `&lt;button&gt;` element. The default [vdldoc:alloy:commandButton:type] is `submit`. Since it extends [javadoc:javax.faces.component.html.HtmlCommandButton], it supports all the features of [vdldoc:h:commandButton]. The component *must be a child* of [vdldoc:h:form] in order to trigger the [vdldoc:alloy:commandButton:action] or [vdldoc:alloy:commandButton:actionListener].
@@ -24,6 +28,10 @@ alloy-commandbutton-general-example-1=Styling via children
 alloy-commandbutton-general-example-2=Styling via [vdldoc:alloy:commandButton:image] attribute
 alloy-commandbutton-general-example-3=Styling via [vdldoc:alloy:commandButton:value] attribute
 alloy-commandbutton-immediate=When the [vdldoc:alloy:commandButton:immediate] attribute is `true`, the [vdldoc:alloy:commandButton:action] and [vdldoc:alloy:commandButton:actionListener] callbacks execute during the *APPLY_REQUEST_VALUES* phase of the JSF lifecycle, rather than the normal INVOKE_APPLICATION phase.
+alloy-commandbutton-menu=There are different ways to style the menus
+alloy-commandbutton-menu-example-1=Styling via [vdldoc:alloy:menu:label] attribute
+alloy-commandbutton-menu-example-2=Styling via [vdldoc:f:facet] tag
+alloy-commandbutton-menu-example-3=Use a [vdldoc:alloy:menu:label] or a [vdldoc:f:facet] to style the button
 alloy-commandbutton-navigation=The component can be used to *navigate* between pages with the [vdldoc:alloy:commandbutton:action] attribute. By specifying a `&lt;redirect&gt;` element in the `navigation-rule`, it will utilize the POST/REDIRECT/GET pattern.
 alloy-commandbutton-param=URL *parameters* can be specified via the [vdldoc:alloy:commandbutton:action] attribute. By specifying a `faces-redirect=true` parameter in the action attribute, it will utilize the POST/REDIRECT/GET pattern.
 alloy-commandbutton-value-attribute=Although the component&apos;s [vdldoc:alloy:commandButton:value] attribute is *read-only* (can&apos;t be changed via form submission), it can be used to determine that an item has been selected by the user.
@@ -285,7 +293,9 @@ date-pattern=Date Pattern
 description=Description
 default=Default
 default-value=Default Value
+delete-options=Delete options
 dislike=Dislike
+drop-down=Dropdown
 error=Error
 example=Example
 expand-all=Expand All
@@ -311,6 +321,7 @@ link-to-a-map-of=Link to a map of
 locale-from-el=locale from EL
 localization=Localization
 max-length-events=Max Length Events
+menu=Menu
 message-styling=Message Styling
 min-max-date=Min/Max Date
 mini=Mini
@@ -344,6 +355,7 @@ portlet-resourceurl=[javadoc:com.liferay.faces.bridge.component.PortletResourceU
 portlet-resourceurl-general=Specify [vdldoc:portlet:param] as a child tag in order to add portlet resource parameters to the URL. The example below shows how to specify the *javax.faces.resource* and *ln* portlet *resource parameters* in order to get a URL that targets a JSF *image* resource.
 position-mouse-cursor-here=Position mouse cursor here
 primary=Primary
+professional=Professional
 rating=Rating
 redisplay=Redisplay
 rendered=Rendered
@@ -380,6 +392,7 @@ text-box-2=Text Box #2
 to-param-page=To Param page
 tooltip-value=Tooltip Value
 usage=Usage
+user=User
 valid-date-range=Valid Date Range
 validating-an-email-address-using-validator-attribute=Validating an *email address* using the [vdldoc:alloy:inputTextarea:validator] attribute
 validating-an-email-address-using-f-validateregex=Validating an *email address* using an [vdldoc:f:validateRegex] child tag
