--- a/demos/showcase/showcase-webapp/src/main/resources/alloy.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/alloy.properties
@@ -1,5 +1,5 @@
-buttonlink_alloy_button=general:button.xhtml|navigation:button.xhtml,navigation-rule.xml|param:button.xhtml|various-styles:button.xhtml
-buttonlink_alloy_commandButton=general:commandButton.xhtml|immediate:commandButton.xhtml,CommandBackingBean.java|navigation:commandButton.xhtml,navigation-rule.xml|param:commandButton.xhtml|various-styles:commandButton.xhtml|value-attribute:commandButton.xhtml,CommandModelBean.java,CommandBackingBean.java,Customer.java
+buttonlink_alloy_button=general:button.xhtml|menu:button.xhtml|navigation:button.xhtml,navigation-rule.xml|param:button.xhtml|various-styles:button.xhtml
+buttonlink_alloy_commandButton=general:commandButton.xhtml|immediate:commandButton.xhtml,CommandBackingBean.java|menu:commandButton.xhtml|navigation:commandButton.xhtml,navigation-rule.xml|param:commandButton.xhtml|various-styles:commandButton.xhtml|value-attribute:commandButton.xhtml,CommandModelBean.java,CommandBackingBean.java,Customer.java
 buttonlink_alloy_commandLink=general:commandLink.xhtml|immediate:commandLink.xhtml,CommandBackingBean.java|navigation:commandLink.xhtml,navigation-rule.xml|param:commandLink.xhtml|value-attribute:commandLink.xhtml,CommandModelBean.java,CommandBackingBean.java,Customer.java
 buttonlink_alloy_link=general:link.xhtml|navigation:link.xhtml,navigation-rule.xml|param:link.xhtml
 data_alloy_dataTable=general:dataTable.xhtml,DataTableModelBean.java,DataTableBackingBean.java
