FACES-1896: improved the look of the Menu use case on the portal

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -293,7 +293,7 @@ date-pattern=Date Pattern
 description=Description
 default=Default
 default-value=Default Value
-delete-options=Delete options
+delete=Delete
 dislike=Dislike
 drop-down=Dropdown
 error=Error
