--- a/demos/bridge/pom.xml
+++ b/demos/bridge/pom.xml
@@ -23,6 +23,7 @@
 		<module>jsf2-jsp-portlet</module>
 		<module>jsf2-spring-portlet</module>
 		<module>primefaces4-portlet</module>
+		<module>primefaces5-portlet</module>
 	</modules>
 
 	<profiles>
