--- a/demos/bridge/primefaces5-portlet/pom.xml
+++ b/demos/bridge/primefaces5-portlet/pom.xml
@@ -3,17 +3,16 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.liferay.faces.demos</groupId>
-		<artifactId>liferay-faces-portal-demos</artifactId>
-		<version>4.1.0-m2-SNAPSHOT</version>
+		<artifactId>liferay-faces-bridge-demos</artifactId>
+		<version>4.2.0-m2-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
-	<artifactId>primefaces4-users-portlet</artifactId>
+	<artifactId>primefaces5-portlet</artifactId>
 	<packaging>war</packaging>
-	<name>PrimeFaces4 Users Portlet</name>
-	<description>This plugin is an alternate portlet for the Liferay Control Panel "Users" portlet.</description>
+	<name>PrimeFaces5 Portlet</name>
 
 	<dependencies>
-	<dependency>
+		<dependency>
 			<groupId>commons-fileupload</groupId>
 			<artifactId>commons-fileupload</artifactId>
 		</dependency>
@@ -22,34 +21,21 @@
 			<artifactId>commons-io</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.liferay.portal</groupId>
-			<artifactId>portal-service</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>javax.annotation</groupId>
-			<artifactId>jsr250-api</artifactId>
+			<groupId>javax.el</groupId>
+			<artifactId>javax.el-api</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>javax.portlet</groupId>
 			<artifactId>portlet-api</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>javax.servlet-api</artifactId>
-		</dependency>
-		<dependency>
 			<groupId>org.primefaces</groupId>
 			<artifactId>primefaces</artifactId>
-			<version>${primefaces4.version}</version>
+			<version>${primefaces5.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jboss.seam</groupId>
 			<artifactId>jboss-el</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.liferay.faces</groupId>
-			<artifactId>liferay-faces-alloy</artifactId>
-			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.liferay.faces</groupId>
@@ -58,7 +44,7 @@
 		</dependency>
 		<dependency>
 			<groupId>com.liferay.faces</groupId>
-			<artifactId>liferay-faces-portal</artifactId>
+			<artifactId>liferay-faces-alloy</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
