FACES-1963 Develop primefaces5-portlet demo

--- a/demos/bridge/pom.xml
+++ b/demos/bridge/pom.xml
@@ -26,6 +26,7 @@
 		<module>jsf2-spring-portlet</module>
 		<module>primefaces3-portlet</module>
 		<module>primefaces4-portlet</module>
+		<module>primefaces5-portlet</module>
 		<module>richfaces4-portlet</module>
 	</modules>
 
