--- a/demos/portal/primefaces3-users-portlet/pom.xml
+++ b/demos/portal/primefaces3-users-portlet/pom.xml
@@ -40,6 +40,7 @@
 		<dependency>
 			<groupId>org.primefaces</groupId>
 			<artifactId>primefaces</artifactId>
+			<version>${primefaces4.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jboss.seam</groupId>
