--- a/demos/bridge/primefaces3-portlet/pom.xml
+++ b/demos/bridge/primefaces3-portlet/pom.xml
@@ -31,6 +31,7 @@
 		<dependency>
 			<groupId>org.primefaces</groupId>
 			<artifactId>primefaces</artifactId>
+			<version>${primefaces3.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jboss.seam</groupId>
