--- a/jrebel/plugin/pom.xml
+++ b/jrebel/plugin/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.liferay.faces.jrebel</groupId>
 		<artifactId>liferay-faces-jrebel</artifactId>
-		<version>4.2.0-m2-SNAPSHOT</version>
+		<version>3.2.5-ga6-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>liferay-faces-jrebel-plugin</artifactId>
