--- a/jrebel/pom.xml
+++ b/jrebel/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.liferay.faces</groupId>
 		<artifactId>liferay-faces</artifactId>
-		<version>4.2.0-m2-SNAPSHOT</version>
+		<version>3.2.5-ga6-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<groupId>com.liferay.faces.jrebel</groupId>
