FACES-1963 Develop primefaces5-portlet demo

--- a/demos/bridge/primefaces5-portlet/pom.xml
+++ b/demos/bridge/primefaces5-portlet/pom.xml
@@ -22,7 +22,7 @@
 		</dependency>
 		<dependency>
 			<groupId>javax.el</groupId>
-			<artifactId>javax.el-api</artifactId>
+			<artifactId>el-api</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>javax.portlet</groupId>
