--- a/demos/bridge/primefaces5-portlet/pom.xml
+++ b/demos/bridge/primefaces5-portlet/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.liferay.faces.demos</groupId>
 		<artifactId>liferay-faces-bridge-demos</artifactId>
-		<version>4.2.0-m2-SNAPSHOT</version>
+		<version>3.1.5-ga6-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>primefaces5-portlet</artifactId>
