FACES-1965 Develop primefaces5-users-portlet demo

--- a/test/integration/demos/portal/pom.xml
+++ b/test/integration/demos/portal/pom.xml
@@ -15,6 +15,7 @@
 
 	<modules>
 		<module>primefaces4-users-portlet</module>
+		<module>primefaces5-users-portlet</module>
 	</modules>
 
 	<profiles>
