--- a/demos/portal/pom.xml
+++ b/demos/portal/pom.xml
@@ -15,6 +15,7 @@
 		<module>jsf2-login-portlet</module>
 		<module>jsf2-registration-portlet</module>
 		<module>primefaces4-users-portlet</module>
+		<module>primefaces5-users-portlet</module>
 	</modules>
 
 </project>
