--- a/test/integration/demos/portal/pom.xml
+++ b/test/integration/demos/portal/pom.xml
@@ -17,6 +17,7 @@
 		<!-- icefaces3-users-portlet cannot be tested on WebLogic due to FACES-1721 -->
 		<module>icefaces3-users-portlet</module>
 		<module>primefaces3-users-portlet</module>
+		<module>primefaces5-users-portlet</module>
 		<module>icefaces3-directory-portlet</module>
 	</modules>
 
