--- a/demos/portal/primefaces4-users-portlet/pom.xml
+++ b/demos/portal/primefaces4-users-portlet/pom.xml
@@ -35,7 +35,7 @@
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
-			<artifactId>javax.servlet-api</artifactId>
+			<artifactId>servlet-api</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.primefaces</groupId>
