--- a/alloy/generator.properties
+++ b/alloy/generator.properties
@@ -13,6 +13,7 @@ builder.copyright.year=2014
 ##
 
 builder.faces.output.dir=src/main/java
+builder.faces.taglib.xml.namespace=alloy
 builder.faces.taglib.xml.output.dir=src/main/resources/META-INF
 builder.faces.version=3.2.5-ga6
 builder.faces.default.alloy.renderer.parent.class=com.liferay.faces.alloy.renderkit.AlloyRendererBase
