FACES-1970 Refactor bridge:inputFile to use new Java packaging scheme (Includes API Change)

--- a/demos/showcase/showcase-portlet/src/main/resources/bridge.properties
+++ b/demos/showcase/showcase-portlet/src/main/resources/bridge.properties
@@ -1,1 +1,1 @@
-input_bridge_inputFile=general:inputFile.xhtml,InputFileModelBean.java,InputFileBackingBean.java
+input_bridge_inputFile=general:inputFile.xhtml,bridgeInputFileCommon.xhtml,BridgeInputFileModelBean.java,BridgeInputFileBackingBean.java|instant-ajax:inputFile.xhtml,bridgeInputFileCommon.xhtml,BridgeInputFileModelBean.java,BridgeInputFileBackingBean.java|multiple:inputFile.xhtml,bridgeInputFileCommon.xhtml,BridgeInputFileModelBean.java,BridgeInputFileBackingBean.java
