--- a/bridge-impl/generator.properties
+++ b/bridge-impl/generator.properties
@@ -14,7 +14,7 @@ builder.copyright.year=2014
 builder.faces.output.dir=src/main/java
 builder.faces.taglib.xml.namespace=bridge
 builder.faces.taglib.xml.output.dir=src/main/resources/META-INF
-builder.faces.version=4.2.0-m2
+builder.faces.version=3.2.5-ga6
 builder.faces.default.alloy.renderer.parent.class=javax.faces.render.Renderer
 builder.faces.component.default.parent.class=javax.faces.component.UIComponentBase
 
