--- a/bridge-impl/pom.xml
+++ b/bridge-impl/pom.xml
@@ -73,4 +73,53 @@
 		</dependency>
 	</dependencies>
 
+	<profiles>
+		<profile>
+			<id>generate-bridge</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>exec-maven-plugin</artifactId>
+						<version>1.2.1</version>
+						<executions>
+							<execution>
+								<goals>
+									<goal>java</goal>
+								</goals>
+								<phase>generate-sources</phase>
+								<configuration>
+									<includeProjectDependencies>false</includeProjectDependencies>
+									<includePluginDependencies>true</includePluginDependencies>
+									<mainClass>com.liferay.alloy.tools.builder.faces.FacesBuilder</mainClass>
+									<systemProperties>
+										<systemProperty>
+											<key>build-ext</key>
+											<value>generator.properties</value>
+										</systemProperty>
+										<systemProperty>
+											<key>HOME</key>
+											<value>${env.HOME}</value>
+										</systemProperty>
+									</systemProperties>
+									<executableDependency>
+										<groupId>com.liferay.alloy</groupId>
+										<artifactId>alloy-generator</artifactId>
+									</executableDependency>
+								</configuration>
+							</execution>
+						</executions>
+						<dependencies>
+							<dependency>
+								<groupId>com.liferay.alloy</groupId>
+								<artifactId>alloy-generator</artifactId>
+								<version>0.1.0</version>
+							</dependency>
+						</dependencies>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+
 </project>
