--- a/alloy/pom.xml
+++ b/alloy/pom.xml
@@ -182,6 +182,18 @@
 		</pluginManagement>
 	</build>
 	<dependencies>
+		<!-- BEGIN: Only required for file upload -->
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<!-- END: Only required for file upload -->
 		<dependency>
 			<groupId>javax.el</groupId>
 			<artifactId>el-api</artifactId>
@@ -202,6 +214,11 @@
 			<groupId>${project.groupId}</groupId>
 			<artifactId>liferay-faces-util</artifactId>
 			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
